28-Jan-2016 TokenizedString post-functions taking multiple arguments now throw an exception if an incorrect number of arguments are passed.

28-Jan-2016 Fixes #117. TokenizedString post-function, @ifnotempty, added in beta1, has been modified so that the expression is @ifnotempty(pred,a,b). If the expression predicate does not evaluate to an empty string, then the whole expression is replaced with a, otherwise b. In addition, Publisher.CollatedDirectory macros have been normalized so that even renamed directories are clonable by a StrippedBinaryCollation.

27-Jan-2016 Fixes #115. Trying to set the Windows character set in a patch for a subset of a module's source files is not supported in the VSSolution build mode. This is because the setting is project wide. An exception is now thrown if this is encountered. The workaround is to apply the patch to all the source files.

19-Jan-2016 Missing toolchain packages and incorrectly spelt toolchain overrides now report how to fix the problem.

13-Jan-2016 ======== Version 1.0.1b1 Release ========

13-Jan-2016 Fixes #111. DiskImage conversion sometimes fails, as the directory containing the converted .dmg was not created.

13-Jan-2016 Fixes #110. MakeFiles with commands including parentheses that are not Make commands require the parentheses to be escaped for bash.

13-Jan-2016 Fixes #55. Fixing MakeFile generation for GNU objcopy and strip.

12-Jan-2016 Fixes #109. Dynamic library builds no longer performs symlink generation for prebuilts.

12-Jan-2016 Fixes #106. TokenizedString post-function, removetrailingseperator, is misspelt. This function is now deprecated, and will be removed in v1.1.0. Replaced with the correctly spelt, removetrailingseparator.

12-Jan-2016 Fixes #105. Added documentation for the pre- and post-functions available in TokenizedStrings.

12-Jan-2016 Fixes #104. Very wide Native builds were not displaying the output and error streams from external processes launched.
